--- a/public/css/_template.scss
+++ b/public/css/_template.scss
@@ -4,3 +4,15 @@ body
 {
     font-size: 1em;
 }
+
+.rounded
+{
+    -webkit-border-radius: 15px !important;
+    border-radius: 15px !important;
+}
+
+div.checkListInline
+{
+    display: inline;
+    margin-right: 30px;
+}
